--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button><a href="html-1/day1.html">Resume html1</a></button>
         <button><a href="coffee cafe/index.html">coffee-cafe</a></button>
         <button><a href="cat assignment/index.html">cat</a></button>
+        <button><a href="home/home.html">home</a></button>
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
 
