--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button><a href="coffee cafe/index.html">coffee-cafe</a></button>
         <button><a href="cat assignment/index.html">cat</a></button>
         <button><a href="Html homework2/index.html">image-table</a></button>
+        <button><a href="form/index.html">form</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
