--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button><a href="cat assignment/index.html">cat</a></button>
         <button><a href="Html homework2/index.html">image-table</a></button>
         <button><a href="form/index.html">form</a></button>
+        <button><a href="small-form/index.html">small-form</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
