--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button><a href="Html homework2/index.html">image-table</a></button>
         <button><a href="form/index.html">form</a></button>
         <button><a href="small-form/index.html">small-form</a></button>
+        <button><a href="virat-kohli/index.html">virat-kohli</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
