--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button><a href="small-form/index.html">small-form</a></button>
         <button><a href="virat-kohli/index.html">virat-kohli</a></button>
         <button><a href="coffee-menu/index.html">menu</a></button>
+        <button><a href="netflix/index.html">Netflix</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
