--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button><a href="virat-kohli/index.html">virat-kohli</a></button>
         <button><a href="coffee-menu/index.html">menu</a></button>
         <button><a href="netflix/index.html">Netflix</a></button>
+        <button><a href="building/index.html">build</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
