--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button><a href="netflix/index.html">Netflix</a></button>
         <button><a href="building/index.html">build</a></button>
         <button><a href="iframe/index.html">iframe</a></button>
+        <button><a href="shoe/index.html">jshoe</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
