--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button><a href="building/index.html">build</a></button>
         <button><a href="iframe/index.html">iframe</a></button>
         <button><a href="shoe/index.html">jshoe</a></button>
+        <button><a href="color/index.html">color</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
