--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button><a href="iframe/index.html">iframe</a></button>
         <button><a href="shoe/index.html">jshoe</a></button>
         <button><a href="color/index.html">color</a></button>
+        <button><a href="Nutrition-label/index.html">Nutrition</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
