--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button><a href="shoe/index.html">jshoe</a></button>
         <button><a href="color/index.html">color</a></button>
         <button><a href="Nutrition-label/index.html">Nutrition</a></button>
+        <button><a href="Typography/index.html">blog</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
