--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button><a href="color/index.html">color</a></button>
         <button><a href="Nutrition-label/index.html">Nutrition</a></button>
         <button><a href="Typography/index.html">blog</a></button>
+        <button><a href="Position.html/index.html">s-shoe</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
