--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button><a href="Nutrition-label/index.html">Nutrition</a></button>
         <button><a href="Typography/index.html">blog</a></button>
         <button><a href="Position.html/index.html">s-shoe</a></button>
+        <button><a href="coffee-project/index.html">coffee-p</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
