--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button><a href="Position.html/index.html">s-shoe</a></button>
         <button><a href="coffee-project/index.html">coffee-p</a></button>
         <button><a href="flexbox cat gallery/index.html">Cat-gallery</a></button>
+        <button><a href="trip/index.html">campibg</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
