--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <button><a href="trip/index.html">campibg</a></button>
         <button><a href="youtube_clone/index.html">y-clone</a></button>
         <button><a href="fem-grid/index.html">fem</a></button>
+        <button><a href="the room/index.html">room</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
