--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <button><a href="fem-grid/index.html">fem</a></button>
         <button><a href="grid-magazine/index.html">grid</a></button>
         <button><a href="the room/index.html">room</a></button>
+        <button><a href="tanishq-clone/styles/">tk</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
