--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <button><a href="grid-magazine/index.html">grid</a></button>
         <button><a href="the room/index.html">room</a></button>
         <button><a href="tanishq-clone/styles/">tk</a></button>
+        <button><a href="tanishq-clone/diamond.html">tanishq</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
