--- a/tanishq-clone/diamond.html
+++ b/tanishq-clone/diamond.html
@@ -266,7 +266,7 @@
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw8b4e53b3/images/hi-res/500063OBAABA09_2.jpg" alt="Sixth Image" class="image image2">
         </div>
         <h3 class="title">Stately Gold and Diamond Nose Pin</h3>
-        <p class="price">₹ 11053 <span>Flat 6% off</span></p>
+        <p class="price">₹ 11053 <span class="discount">Flat 6% off</span></p>
         <button class="wishlist-btn" title="Add to Wishlist">&#9825;</button>
     </div>
 
@@ -321,7 +321,7 @@
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw748eda70/images/hi-res/50D3B3YPCAA32_1.jpg" alt="First Image" class="image image1">
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw3ea3d2c5/images/hi-res/50D3B3YPCAA32_2.jpg" alt="Second Image" class="image image2">
         </div>
-        <h3 class="titles">Dazzling Diamond Mangalsutra</h3>
+        <h3 class="title">Dazzling Diamond Mangalsutra</h3>
         <p class="price">₹ 67686</p>
         <button class="wishlist-btn" title="Add to Wishlist">&#9825;</button>
     </div>
@@ -333,7 +333,7 @@
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dwcda98055/images/hi-res/502999YCNAA32_1.jpg" alt="Third Image" class="image image1">
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw749866c6/images/hi-res/502999YCNAA32_2.jpg" alt="Fourth Image" class="image image2">
         </div>
-        <h3 class="titles">Infinity Floral Diamond Mangalsutra</h3>
+        <h3 class="title">Infinity Floral Diamond Mangalsutra</h3>
         <p class="price">₹ 65972</p>
         <button class="wishlist-btn" title="Add to Wishlist">&#9825;</button>
     </div>
@@ -345,8 +345,8 @@
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw40acc0cb/images/hi-res/50D4C1VNG1A02_1.jpg" alt="Fifth Image" class="image image1">
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw19f54107/images/hi-res/50D4C1VNG1A02_2.jpg" alt="Sixth Image" class="image image2">
         </div>
-        <h3 class="titles">Enchanting Teardrop Diamond Bangle</h3>
-        <p class="price">₹ 12560 <span>only 1 left</span></p>
+        <h3 class="title">Enchanting Teardrop Diamond Bangle</h3>
+        <p class="price">₹ 12560 <span class="only">only 1 left</span></p>
         <button class="wishlist-btn" title="Add to Wishlist">&#9825;</button>
     </div>
 
@@ -391,7 +391,7 @@
             <img src="https://www.tanishq.co.in/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw56c2ba55/images/hi-res/50K4B1PCHAAA02_2.jpg" alt="Sixth Image" class="image image2">
         </div>
         <h3 class="title">Twinkling Flower Diamond Pendant for Kids</h3>
-        <p class="price">₹ 10676 <span>only 1 left</span></p>
+        <p class="price">₹ 10676 <span class="only">only 1 left</span></p>
         <button class="wishlist-btn" title="Add to Wishlist">&#9825;</button>
     </div>
 
