--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <button><a href="the room/index.html">room</a></button>
         <button><a href="tanishq-clone/styles/">tk</a></button>
         <button><a href="tanishq-clone/diamond.html">tanishq</a></button>
+        <button><a href="tanishq rinng/ring.html">T-ring</a></button>
 
         <!-- <button><a href="">coffee-cafe</a></button> -->
 
