--- a/tanishq rinng/ring.html
+++ b/tanishq rinng/ring.html
@@ -15,7 +15,7 @@
 
     <section class="product-section">
 
-        <h2>Diamond <span class="amount"> (10935 results)</span></h2>
+        <h2>Ring <span class="amount"> (10935 results)</span></h2>
         <div class="filter-sort">
             <button class="filter-btn">Filter</button>
             <div class="sort-dropdown">
